--- a/package.json
+++ b/package.json
@@ -58,12 +58,14 @@
     "dotenv": "^7.0.0",
     "es6-promisify": "^6.0.1",
     "express": "^4.16.4",
+    "handlebars": "^4.1.2",
     "helmet": "^3.16.0",
     "http-status-codes": "^1.3.2",
     "joi": "^14.3.1",
+    "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.14",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "pg": "^7.9.0",
